--- a/websystems.css
+++ b/websystems.css
@@ -149,16 +149,29 @@ td {
     color: #393f4d;
     background-color: #393f4d;
     border: 0.1px solid white;
+    margin-right: 3px;
 }
 
 #secondary-background {
     background-color: #1d1e22;
     color: #1d1e22;
     border: 0.1px solid white;
+    margin-right: 3px;
+
 }
 
 #main-text {
     background-color: #d4d4dc;
     color: #d4d4dc;
     border: 0.1px solid white;
+    margin-right: 3px;
+
+}
+
+#secondary-text {
+    background-color: #feda6a;
+    color: #feda6a;
+    border: 0.1px solid white;
+    margin-right: 3px;
+
 }
